[package]
name = "rand_simple"
version = "0.1.7"
authors = ["Tremendous1192"]
edition = "2021"
description = "The simple random number generator that is independent from the other libraries and based on XOR shift."
readme = "README.md"
repository = "https://github.com/Tremendous1192/rand_simple"
license = "MIT OR Apache-2.0"
keywords = ["rng", "random"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
