[package]
name = "rand_simple"
version = "0.2.12"
authors = ["Tremendous1192"]
edition = "2021"
resolver = "2" # dev-dependencies が通常コンパイルに引き継がれるバグ対応
description = "The simple random number generator that is independent from the other libraries and based on XOR shift."
readme = "README.md"
repository = "https://github.com/Tremendous1192/rand_simple"
license = "MIT OR Apache-2.0"
keywords = ["rng", "random"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
